# QtCV

./: CMakeLists.txt  LICENSE  README.md  facedetector.cpp  facedetector.h  helloworldfilter.cpp  helloworldfilter.h  helloworldfilterrunnable.cpp  helloworldfilterrunnable.h  main.cpp  resources.qrc
qml/: main.qml
